# persistent-touch-id-sudo

./: CMakeLists.txt  README.md
assets/: com.yuriyguts.persistent-touch-id-sudo.plist
src/: main.c
